# poisonmem

./: .gitignore  GUIDE.md  README.md  config.yaml  pyproject.toml
results/: README.md
src/memory_poisoning_sanity/: __init__.py  cli.py  constants.py  data.py  experiment.py  metrics.py  models.py  openrouter.py  prompts.py  retrieval.py
tests/: conftest.py  test_data.py  test_decision.py  test_experiment.py  test_retrieval.py
