[project]
name = "memory-poisoning-sanity"
version = "0.1.0"
description = "Controlled persistent-memory retrieval-poisoning sanity check"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.28.1",
  "numpy>=2.2.0",
  "pandas>=2.2.0",
  "pyarrow>=19.0.0",
  "pydantic>=2.10.0",
  "pyyaml>=6.0.2",
  "rank-bm25>=0.2.2",
  "sentence-transformers>=4.0.0",
  "typer>=0.15.0",
]

[project.scripts]
memory-sanity = "memory_poisoning_sanity.cli:app"

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "pytest-cov>=6.0.0",
  "ruff>=0.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/memory_poisoning_sanity"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
